Compose Elasticsearch predicates safely (#21)
Complete P1.2 permanent Elasticsearch predicate composition architecture with structured translation decisions, enforcement semantics, safe residual ownership, document-scope Boolean composition, normalization, and full architecture regression coverage.